Refactor file import